--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
             
             <a-entity camera></a-entity>
         </a-scene>
-        <button class="Hotspot" slot="hotspot-1" data-position="0.03775318985059595m 0.10679517168949704m 0.00010212748048349374m" data-normal="-0.23230021880321805m 0.7284520582913675m 0.644510827771766m" data-visibility-attribute="visible">
-    </body>
+        <button class="hotspot" slot="hotspot-1" data-position="0.03775318985059595m 0.10679517168949704m 0.00010212748048349374m" data-normal="-0.23230021880321805m 0.7284520582913675m 0.644510827771766m" data-visibility-attribute="visible">
+   <div class="HotspotAnnotation">note 1</div>
+    </button>
+            </body>
 </html>
