--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             >
                 <a-entity
                     id="bowser-model"
-                    scale="0.01881169858740135 0.01881169858740135 0.01881169858740135"
+                    scale="0 0 0"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
                     class="clickable"
